<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_main"
        android:enabled="true"
        android:icon="@drawable/main"
        android:title="@string/main_center"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_novel"
        android:enabled="true"
        android:icon="@drawable/novel"
        android:title="@string/main_novel"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_account"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/main_user"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_settings"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/main_settings"
        app:showAsAction="ifRoom"/>
</menu>