<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.fragment.AccountFragment">

    <ImageView
        android:layout_width="333dp"
        android:layout_height="82dp"
        android:layout_above="@+id/cont_block"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/favicon" />

    <LinearLayout
        android:id="@+id/cont_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/json_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/log_screen_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:ems="12"
            android:hint="@string/log_screen_login"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:textColorHint="#000000"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:ems="12"
            android:hint="@string/log_screen_pass"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#000000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="10dp"
                android:background="@drawable/btn_log_reg"
                android:text="@string/log_screen_login_btn"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:background="@drawable/btn_log_reg"
                android:text="@string/log_screen_register_btn"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/log_screen_forgot"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vk_link"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_web"
            android:padding="12dp"
            android:src="@drawable/vk"/>

        <ImageView
            android:id="@+id/discord_link"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_web"
            android:padding="10dp"
            android:src="@drawable/discord"/>

        <ImageView
            android:id="@+id/telegram_link"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_web"
            android:padding="12dp"
            android:src="@drawable/telegram"/>
    </LinearLayout>
</RelativeLayout>